--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -1,9 +1,12 @@
 * {
   box-sizing: border-box;
-  color: #fff;
+  
  }
 .app{
   width: 100%;
   height: 100%;
   position: absolute;
+}
+.dv-border-svg-container{
+  z-index: 10;
 }
